# zebra-guard

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: architecture.md  disclaimer.md  legal-rules.md  mvp.md  packaging.md  parking_detection_plan.md  pipelines.md  privacy.md
docs/user-guide/: README.md
packaging/: installer.iss  pyinstaller.spec  sign.ps1  version_info.txt
resources/ffmpeg/: .gitkeep
resources/models/: .gitkeep
scripts/: annotate_events.py  benchmark.py  build_exe.ps1  debug_demo_tracks.py  demo_roadsafety.py  detect_crosswalk.py  dev_run.py  download_models.py  regression_mainline.py  roi_picker.py  run_pipeline.py  smoke_detect.py  smoke_ui.py  smoke_yolo_seg.py  static_parking_detect.py  zero_shot_detect.py
scripts/presets/: README.md  v5_baseline_cmd.sh  v5_baseline_params.json  v7_baseline_cmd.sh  v7_baseline_params.json  yolo_seg_baseline.json  yolo_seg_initial.json  yolo_seg_tuned.json
src/zebraguard/: __init__.py  __main__.py  cli.py
src/zebraguard/core/: __init__.py  pipeline.py  project.py  worker.py
src/zebraguard/export/: __init__.py  bundle.py  clip.py  complaint.py  keyframe.py
src/zebraguard/ml/: __init__.py  crosswalk_detect.py  detection.py  exceptions.py  homography.py  parking_rules.py  roi.py  tracking.py  types.py  violation_rules.py
src/zebraguard/storage/: __init__.py
tests/core/: test_project.py
tests/fixtures/: .gitkeep  roadsafety_hom.json  roadsafety_roi.json
tests/ml/: test_homography.py  test_parking_rules.py  test_roi.py  test_tracking.py  test_violation_rules.py
(+24 files in other folders)
