[project]
name = "zebraguard"
version = "0.1.0.dev0"
description = "斑馬線未禮讓違規識別輔助工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = []
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "shapely>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# ultralytics 把 torch、pandas 一起拖下來(~2 GB)。
# 純數學測試不需要,故放 optional。
inference = [
    "ultralytics>=8.3",
    "transformers>=4.44",  # Mask2Former for 斑馬線自動分割
    "pillow>=10.0",        # zero_shot_detect 依賴 PIL.Image
]
ui = [
    "PySide6>=6.7",
]

[project.scripts]
zebraguard-pipeline = "zebraguard.cli:run_pipeline_main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zebraguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
